Add missing translation
We're using this translation in the view for editing Editionable
Worldwide Organisaitons, so we need to include it in the locale files.

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -313,6 +313,13 @@ ar:
         other: إصدارات مع موعد
         two:
         zero:
+      editionable_worldwide_organisation:
+        few:
+        many:
+        one:
+        other:
+        two:
+        zero:
       equality_and_diversity:
         few:
         many:
