--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -211,6 +211,9 @@ bn:
       edition_with_appointment:
         one: অ্যাপয়েন্টমেন্টের সংস্করণ
         other: অ্যাপয়েন্টমেন্টের সংস্করণসমূহ
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: সমতা এবং বৈচিত্র্য
         other: সমতা এবং বৈচিত্র্য
