--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -185,6 +185,8 @@ id:
         other: Edisi
       edition_with_appointment:
         other: Edisi dengan penunjukan
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: Kesetaraan dan keberagaman
       fatality_notice:
