--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -183,6 +183,8 @@ ja:
         other: 版
       edition_with_appointment:
         other: 予約ありの版
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: 平等と多様性
       fatality_notice:
