--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -186,6 +186,8 @@ ms:
         other: Suntingan
       edition_with_appointment:
         other: Disunting dengan perlantikan
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: Kesamaan dan kepelbagaian
       fatality_notice:
