--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -261,6 +261,11 @@ ru:
         many:
         one: Издание с назначением
         other: Издания с назначением
+      editionable_worldwide_organisation:
+        few:
+        many:
+        one:
+        other:
       equality_and_diversity:
         few:
         many:
