--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -211,6 +211,9 @@ sw:
       edition_with_appointment:
         one: Toleo lenye miadi
         other: Matoleo yenya miadi
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Usawa na utofauti
         other: Usawa na utofauti
