--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -211,6 +211,9 @@ ta:
       edition_with_appointment:
         one: நியமனத்துடன் பதிப்பு
         other: நியமனத்துடன் பதிப்புகள்
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: சமத்துவமும் பன்முகமும்
         other: சமத்துவமும் பன்முகமும்
