--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -185,6 +185,8 @@ th:
         other: ฉบับ
       edition_with_appointment:
         other: ฉบับที่มีการนัดหมาย
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: ความเสมอภาคและความหลากหลาย
       fatality_notice:
