--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -263,6 +263,11 @@ uk:
         many:
         one: Видання із домовленістю
         other: Видання із домовленістю
+      editionable_worldwide_organisation:
+        few:
+        many:
+        one:
+        other:
       equality_and_diversity:
         few:
         many:
