--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -185,6 +185,8 @@ vi:
         other: Phiên bản
       edition_with_appointment:
         other: Phiên bản có cuộc hẹn
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: Bình đẳng và đa dạng
       fatality_notice:
