--- a/config/locales/zh-tw.yml
+++ b/config/locales/zh-tw.yml
@@ -185,6 +185,8 @@ zh-tw:
         other: 版本
       edition_with_appointment:
         other: 預約版本
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: 平等和多元
       fatality_notice:
