--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -211,6 +211,9 @@ bg:
       edition_with_appointment:
         one: Издание с предварителна уговорка
         other: Издания с предварителна уговорка
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Равенство и разнообразие
         other: Равенство и разнообразие
