--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -238,6 +238,10 @@ cs:
         few:
         one: Vydání se schůzkou
         other: Vydání se schůzkou
+      editionable_worldwide_organisation:
+        few:
+        one:
+        other:
       equality_and_diversity:
         few:
         one: Rovnost a rozmanitost
