--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -211,6 +211,9 @@ de:
       edition_with_appointment:
         one: Ausgabe mit Termin
         other: Ausgaben mit Termin
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Gleichstellung und Vielfalt
         other: Gleichstellung und Vielfalt
