--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -211,6 +211,9 @@ el:
       edition_with_appointment:
         one: Έκδοση με ραντεβού
         other: Εκδόσεις με ραντεβού
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Ισότητα και διαφορετικότητα
         other: Ισότητα και διαφορετικότητα
