--- a/config/locales/es-419.yml
+++ b/config/locales/es-419.yml
@@ -212,6 +212,9 @@ es-419:
       edition_with_appointment:
         one: Edición con cita
         other: Ediciones con cita
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Igualdad y diversidad
         other: Igualdad y diversidad
