--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -211,6 +211,9 @@ fa:
       edition_with_appointment:
         one: ویرایش با وقت
         other: ویرایش با وقت
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: برابری و تنوع
         other: برابری و تنوع
