--- a/config/locales/kk.yml
+++ b/config/locales/kk.yml
@@ -211,6 +211,9 @@ kk:
       edition_with_appointment:
         one: Жазбасы бар басылым
         other: Жазбасы бар басылымдар
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Теңдік және әртүрлілік
         other: Теңдік және әртүрлілік
