--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -185,6 +185,8 @@ ko:
         other: 에디션
       edition_with_appointment:
         other: 예약판
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: 평등 및 다양성
       fatality_notice:
