--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -209,6 +209,9 @@ nl:
       edition_with_appointment:
         one: Editie met afspraak
         other: Edities met afspraak
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Gelijkheid en diversiteit
         other: Gelijkheid en diversiteit
