--- a/config/locales/ps.yml
+++ b/config/locales/ps.yml
@@ -212,6 +212,9 @@ ps:
       edition_with_appointment:
         one: د تقرر سره نسخه
         other: د تقرر سره نسخې
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: مساوات او تنوع
         other: مساوات او تنوع
