--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -212,6 +212,9 @@ pt:
       edition_with_appointment:
         one: Edição com marcação
         other: Edições com marcação
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Igualdade e diversidade
         other: Igualdade e diversidade
