--- a/config/locales/so.yml
+++ b/config/locales/so.yml
@@ -211,6 +211,9 @@ so:
       edition_with_appointment:
         one: Qaybta leh balanta
         other: Qaybtaha leh balamaha
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Sinaanta iyo kala duwanaanshaha
         other: Sinaanta iyo kala duwanaanshaha
