--- a/config/locales/sr.yml
+++ b/config/locales/sr.yml
@@ -238,6 +238,10 @@ sr:
         few:
         one: Izdanje sa terminom
         other: Izdanje sa terminima
+      editionable_worldwide_organisation:
+        few:
+        one:
+        other:
       equality_and_diversity:
         few:
         one: Jednakost i raznolikost
