--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -212,6 +212,9 @@ sv:
       edition_with_appointment:
         one: Upplaga med tidsbeställning
         other: Upplagor med tidsbeställning
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Jämlikhet och mångfald
         other: Jämlikhet och mångfald
