--- a/config/locales/tk.yml
+++ b/config/locales/tk.yml
@@ -211,6 +211,9 @@ tk:
       edition_with_appointment:
         one: Bellenmek bilen neşir
         other: Bellenmek bilen neşirler
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Deňlik we dürlülik
         other: Deňlik we dürlülik
