--- a/config/locales/uz.yml
+++ b/config/locales/uz.yml
@@ -211,6 +211,9 @@ uz:
       edition_with_appointment:
         one: Тайинлаш билан таҳрир
         other: Тайинлашлар билан таҳрир
+      editionable_worldwide_organisation:
+        one:
+        other:
       equality_and_diversity:
         one: Тенглик ва турли-туманлик
         other: Тенглик ва турли-туманлик
