--- a/config/locales/zh-hk.yml
+++ b/config/locales/zh-hk.yml
@@ -185,6 +185,8 @@ zh-hk:
         other: 修訂
       edition_with_appointment:
         other: 有預約之修訂
+      editionable_worldwide_organisation:
+        other:
       equality_and_diversity:
         other: 平等及多元
       fatality_notice:
