--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -362,6 +362,20 @@ en:
         one: Written statement to Parliament
         other: Written statements to Parliament
     updated: updated
+  emergency_banner:
+    keys:
+      campaign_class: Campaign class
+      campaign_classes:
+        local_emergency: Local emergency
+        national_emergency: National emergency
+        notable_death: Notable death
+      heading: Heading
+      link: Link URL (optional)
+      link_text: Link text (optional)
+      short_description: Short description (optional)
+    status:
+      deployed: The emergency banner is currently deployed with the following content.
+      not_deployed: The emergency banner is not currently deployed.
   i18n:
     direction: ltr
   language_names:
