Renamed national statistics document type to accredited official statistics
From the 7th June, National Statistics documents will be known as Accredited Official Statistics, in line with Office for National Statistics Guidance. We will republish all national statistics documents to apply this name change.

--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -439,8 +439,8 @@ cy:
       national_statistics:
         few:
         many:
-        one: Ystadegau Gwladol
-        other: Ystadegau Gwladol
+        one: Ystadegau swyddogol achrededig
+        other: Ystadegau swyddogol achrededig
         two:
         zero:
       news_article:
