--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,8 +248,8 @@ en:
         one: Modern Slavery Statement
         other: Modern Slavery Statements
       national_statistics:
-        one: National Statistics
-        other: National Statistics
+        one: Accredited official statistics
+        other: Accredited official statistics
       news_article:
         one: News article
         other: News articles
