Add an `Edition::Searchable` concern
This removes the `Searchable` include and config from the base `Edition`
model and moves it to a concern. We can then include it in everything
that inherits the base `Edition` model. This will then allow us to
inherit `Edition`s without having to override search functionality if we
don’t need it.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -313,6 +313,9 @@ en:
       research:
         one: Research
         other: Research
+      searchable_edition:
+        one: Searchable edition
+        other: Searchable editions
       service:
         one: Service
         other: Services
