--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -409,7 +409,7 @@ en:
     fa: Persian
     fi: Finnish
     fr: French
-    gd: Irish
+    ga: Irish
     gu: Gujarati
     he: Hebrew
     hi: Hindi
