Handle errors when dates are invalid
If there are errors, we do the rest of the filters
without the erroring ones, so as to return
something helpful.

--- a/lib/engines/content_block_manager/config/locales/en.yml
+++ b/lib/engines/content_block_manager/config/locales/en.yml
@@ -3,6 +3,13 @@ en:
     attributes:
       content_block_manager/content_block/edition/document:
         title: Title
+  content_block_document:
+    index:
+      errors:
+        date:
+          invalid: "%{attribute} is not a valid date"
+          range:
+            invalid: "From date must be before to date"
   content_block_edition:
     confirmation_page:
       scheduled:
