Change the “can’t be blank” error suffix
GDS guidance is to avoid negative contractions like can’t and don’t.
From the [GDS Style guide][1]:

> Avoid negative contractions like can’t and don’t. Many users find them harder to read, or misread them as the opposite of what they say. Use cannot, instead of can’t.

[1]: https://www.gov.uk/guidance/style-guide/a-to-z#contractions

--- a/config/locales/en/errors.yml
+++ b/config/locales/en/errors.yml
@@ -1,4 +1,7 @@
 en:
+  errors:
+    messages:
+      blank: "cannot be blank"
   activerecord:
     attributes:
       publication/nation_inapplicabilities:
