--- a/lib/engines/content_block_manager/config/locales/en.yml
+++ b/lib/engines/content_block_manager/config/locales/en.yml
@@ -48,4 +48,4 @@ en:
         detail: You can now view the updated content block.
     review_page:
       errors:
-        confirm: Confirm details are correct
+        confirm: Tick box to confirm details are correct
