--- a/config/locales/en/admin/whats_new.yml
+++ b/config/locales/en/admin/whats_new.yml
@@ -1,7 +1,7 @@
 en:
   admin:
     feedback:
-      show_banner: true
+      show_banner: false
     whats_new:
       show_banner: false
       title: What’s new in Whitehall Publisher
