Allow validation of arrays in a details hash
This tweaks the validator to remove blank fields from arrays of hashes,
as well a customise the errors so we retain the pointer to the error,
but ensure the error message reads correctly, i.e instead of
`My array 0 foo cannot be blank` it reads `Foo cannot be blank`, whilst
still pointing to `my_array_0_foo`

--- a/lib/engines/content_block_manager/config/locales/en.yml
+++ b/lib/engines/content_block_manager/config/locales/en.yml
@@ -11,6 +11,9 @@ en:
           invalid: "Invalid %{attribute}"
           blank: "%{attribute} cannot be blank"
           attributes:
+            details:
+              blank: "%{attribute} cannot be blank"
+              invalid: "Invalid %{attribute}"
             schedule_publishing:
               blank: "Select publish date"
             scheduled_publication:
