Add validations for change notes
If a change is major, the user must add a change note. We also validate
if the change type has been selected.

I’ve also tweaked the `assert_valid` and `assert_invalid` model helpers
to accept an optional `context` arg.

--- a/lib/engines/content_block_manager/config/locales/en.yml
+++ b/lib/engines/content_block_manager/config/locales/en.yml
@@ -13,6 +13,8 @@ en:
           attributes:
             schedule_publishing:
               blank: "Select publish date"
+            major_change:
+              inclusion: "Select if users have to know the content has changed"
             scheduled_publication:
               blank: "Scheduled publication date and time cannot be blank"
               invalid_date: "Invalid scheduled publication date and time"
